welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var x:Int=0
  baisseCrayon()
  while(!x){
    avance()
    if(estFaceMur && Direction.EST=){
      return true
    }
    return false
  }
}